fix: fix word-wrap

--- a/src/pages/Home/People/ProfileItem/ProfileItem.css
+++ b/src/pages/Home/People/ProfileItem/ProfileItem.css
@@ -146,5 +146,5 @@ a {
 
 .profile-content__bio {
   max-width: 100%;
-  word-break: break-all;
+  word-wrap: break-word;
 }
